# dracor-mcp

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  compose.dev.yml  compose.sse.dev.yml  compose.yml  dracor_mcp.py  dracor_mcp_fastmcp_dev.py  proxy.py  pyproject.toml
.github/workflows/: publish_image_to_dockerhub.yml
